# TDT-project

./: .gitignore  AudioManager.h  Board.cpp  Board.h  GUI.h  Game.cpp  Game.h  HexagonalButton.cpp  HexagonalButton.h  README.md  board.cpp  board.h  game.cpp  game.h  helper.cpp  helper.h  hexagonalbutton.h  main.cpp  meson.build  rect.h  testing.cpp  testing.h  vec2.h
UI/: Button.cpp  Button.h  HexGrid.cpp  HexGrid.h  HexTile.cpp  HexTile.h  Label.cpp  Label.h  Slider.h  TurnIndicator.cpp  TurnIndicator.h  UINode.cpp  UINode.h
pathfinding/: AStar.cpp  AStar.h  BoardNode.cpp  BoardNode.h
savedata/: README.MD  state.hex.butterfly  state.hex.goodgame
